network-policy/manifests/02-clients-same-ns.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: client-one
  name: client-one
spec:
  containers:
  - image: curlimages/curl:latest
    name: client-one
    command:
    - sleep
    - "3600"
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: client-two
  name: client-two
spec:
  containers:
  - image: curlimages/curl:latest
    name: client-two
    command:
    - sleep
    - "3600"
